# achsenlastwaage

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
form/: CheckWeightingDialog.ui  CreateDatabaseDialog.ui  CreateTextDialog.ui  CreateVehicleDialog.ui  DatabaseCombo.ui  DatabaseDialog.ui  DummyScaleWidget.ui  GoodsDialog.ui  MainWindow.ui  ManualInputWidget.ui  WeightingView.ui
picture/: resource.qrc
src/: Button.cpp  Button.h  CheckWeightingDialog.cpp  CheckWeightingDialog.h  CreateDatabaseDialog.cpp  CreateDatabaseDialog.h  CreateTextDialog.cpp  CreateTextDialog.h  CreateVehicleDialog.cpp  CreateVehicleDialog.h  Database.cpp  Database.h  DatabaseDialog.cpp  DatabaseDialog.h  DummyScale.cpp  DummyScale.h  DummyScaleWidget.cpp  DummyScaleWidget.h  FieldDialog.cpp  FieldDialog.h  Fzw12.cpp  Fzw12.h  GoodsDialog.cpp  GoodsDialog.h  Led.cpp  Led.h  MainWindow.cpp  MainWindow.h  ManualInputWidget.cpp  ManualInputWidget.h  ProductDialog.cpp  ProductDialog.h  Scale.cpp  Scale.h  ScaleWidget.cpp  ScaleWidget.h  SerialPort.cpp  SerialPort.h  SignalLight.cpp  SignalLight.h  (+35 more)
